k8s/presence-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-presence-service
spec:
  replicas: 1
  selector:
    matchLabels:
      chat-app: presence-service
  template:
    metadata:
      labels:
        chat-app: presence-service
    spec:
      containers:
        - name: cont-presence-service
          image: wonesir/chat-api-service
---

apiVersion: v1
kind: Service
metadata:
  name: service-presence-service
spec:
  selector:
    chat-app: presence-service
  type: ClusterIP
  ports:
    - protocol: "TCP" 
      port: 8084 # ???
      targetPort: 8080
