k8s/upload-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-upload-service
spec:
  replicas: 1
  selector:
    matchLabels:
      chat-app: upload-service
  template:
    metadata:
      labels:
        chat-app: upload-service
    spec:
      containers:
        - name: cont-upload-service
          image: wonesir/chat-upload-service
---

apiVersion: v1
kind: Service
metadata:
  name: service-upload-service
spec:
  selector:
    chat-app: upload-service
  type: ClusterIP
  ports:
    - protocol: "TCP" 
      port: 8081 # ??
      targetPort: 8080
