k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-nginx-ingress 
spec:
  ingressClassName: nginx 
  rules:
  #- host: 
  - http:
      paths:
      - backend:
          service:
            name: upload-service 
            port:
              number: 8080 
        path: /
