k8s/ws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-nginx-ingress 
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "http_x_forwarded_for" # our server is hidden behind CF
spec:
  ingressClassName: nginx 
  rules:
  #- host:
  - http:
      paths:
      - backend:
          service:
            name: ws-service 
            port:
              number: 8082 
        path: /ws 
        pathType: ImplementationSpecific
